--- a/Lab01/src/main/java/index.html
+++ b/Lab01/src/main/java/index.html
@@ -6,8 +6,8 @@
 
 </head>
 <body>
-<h1>Kasia xyz</h1>
-<h1>Jóźwiak</h1>
+<h1>Ala xyz</h1>
+<h1>Ma kota</h1>
 <font color="red">Czerwony!</font>
 <li>
     <a href="/">main</a>
