replace css to different file

--- a/Lab5HtmlCSS/index.html
+++ b/Lab5HtmlCSS/index.html
@@ -3,14 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>system ocen</title>
-    <style>
-      article {
-        display: none;
-      }
-      article:target {
-        display: block;
-      }
-    </style>
+	<link rel="stylesheet" href="styles.css">
 </head>
 
 <header>
