--- a/Lab5HtmlCSS/finished HTML/index.html
+++ b/Lab5HtmlCSS/finished HTML/index.html
@@ -7,8 +7,8 @@
 </head>
 
 <header>
-	<h1><img src="logo.png" alt="Italian Trulli">System zarządzania ocenami studentów</h1>
-	
+	<h1>System zarządzania ocenami studentów</h1>
+	<img src="lama.jpg" alt="Italian Trulli">
 </header>
 
 <nav>
@@ -168,7 +168,9 @@
 </article>
 
 
-<footer class="card">
+
+
+<footer>
 	Autor: <address>Katarzyna Jóźwiak (abc@wp.pl)</address>
 	<a href="url">https://www.put.poznan.pl/</a>
 </footer>
