--- a/Lab5HtmlCSS/index.html
+++ b/Lab5HtmlCSS/index.html
@@ -2,20 +2,22 @@
 <html lang="pl" dir="ltr">
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>system ocen</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<header>
-	<h1><img src="logo.png" alt="Italian Trulli">System zarządzania ocenami studentów</h1>
+<body>
+	<header>
+		<h1><img src="logo.png" alt="Italian Trulli">System zarządzania ocenami studentów</h1>
 	
-</header>
+	</header>
 
 <nav>
 	<ul>
-		<li> <a class="navlink" href="#students">Lista studentów</a> </li>
-		<li> <a class="navlink" href="#grades">Lista ocen</a></li>
-		<li> <a class="navlink" href="#courses">Lista przedmiotów</a></li>
+		<li> <a class="menu" href="#students">Lista studentów</a> </li>
+		<li> <a class="menu" href="#grades">Lista ocen</a></li>
+		<li> <a class="menu" href="#courses">Lista przedmiotów</a></li>
 	</ul>
 </nav>
 
@@ -70,7 +72,6 @@
 		</table>
 	</form>
 </article>
-
 
 <article id="grades">
 	<h2>Lista ocen studenta</h2>
@@ -182,4 +183,5 @@
 	Autor: <address>Katarzyna Jóźwiak (abc@wp.pl)</address>
 	<a href="url">https://www.put.poznan.pl/</a>
 </footer>
+</body>
 </html>
