--- a/Lab6JavaScript/src/main/resources/index.html
+++ b/Lab6JavaScript/src/main/resources/index.html
@@ -5,9 +5,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>system ocen</title>
 	<link rel="stylesheet" href="styles.css">
+	<script type="text/javascript" src="jquery.js"></script>
+	<script type="text/javascript" src="knockout.js"></script>
+	<script type="text/javascript" src="myJS.js"></script>
+
 </head>
 
 <body>
+	
 	<header>
 		<h1><img src="logo.png" alt="Italian Trulli">System zarządzania ocenami studentów</h1>
 	
@@ -46,24 +51,17 @@
 				<td></td>
 				<td></td>
 			</tr>
-			<tr>
-				<td> <input type="number" value="127001" placeholder="Index" readonly>  </td>
-				<td> <input type="text" value="Katarzyna" required> </td>
-				<td> <input type="text" value="Jóźwiak" required> </td>
-				<td> <input type="date" value="1996-01-05" min="1950-01-01" max="2010-01-01" required> </td>
-				<td> <a href="#grades">Wyświetl oceny</a> </td>
-				<td><button type="button">Usuń</button></td>
-				<td><button type="button" >Edytuj</button></td>
-			</tr>
-			<tr>
-				<td><input type="number" value="127002" placeholder="Index" readonly>  </td>
-				<td> <input type="text" value="Jan" required> </td>
-				<td> <input type="text" value="Kowalski" required> </td>
-				<td> <input type="date" value="1995-11-15" min="1950-01-01" max="2010-01-01" required> </td>
-				<td> <a href="#grades">Wyświetl oceny</a> </td>
-				<td><button type="button">Usuń</button></td>
-				<td><button type="button">Edytuj</button></td>
-			</tr>
+			<tbody data-bind="foreach: student">
+				<tr>
+					<td> <input type="number" data-bind="value: index" readonly>  </td>
+					<td> <input type="text" data-bind="value: name" required> </td>
+					<td> <input type="text" data-bind="value: surname" required> </td>
+					<td> <input type="date" data-bind="value: birthdate" min="1950-01-01" max="2050-01-01" required> </td>
+					<td> <a href="#grades">Wyświetl oceny</a> </td>
+					<td><button type="button">Usuń</button></td>
+					<td><button type="button" >Edytuj</button></td>
+				</tr>
+			</tbody>
 			<tr> <!--do dodania -->
 				<td>Dodaj studenta</td>
                 <td><input type="text" id="studentsNameToAdd" placeholder="Name" required></td>
@@ -116,19 +114,6 @@
 				<td><button type="button">Edytuj</button></td>
 				
 			</tr>
-			<tr>
-				<td><input type="number" name="value" value="4.5" min="2.0" max="5.0" step="0.5"></td>
-				<td> <input type="date" value="2019-11-25" min="1950-01-01" max="2020-01-01" required> </td>
-				<td> 
-					<select>
-						<option value="1" selected>Informatyka</option>
-						<option value="2">Matematyka</option>
-					</select>
-				</td>
-				<td> <a href="#courses">Wyświetl przedmiot</a> </td>
-				<td><button type="button">Usuń</button></td>
-				<td><button type="button">Edytuj</button></td>
-			</tr>
 			<tr> <!--do dodawania -->
 				<td><input type="number" name="value" min="2.0" max="5.0" step="0.5" placeholder="value"></td>
                 <td><input type="date" id="gradeDateToAdd" required></td>
@@ -161,12 +146,6 @@
                 <td><input type="text" id="courseName" placeholder="Name"></td>
                 <td><input type="text" id="teacherName" placeholder="TeacherName"></td>
 				<td></td><td></td>
-			</tr>
-			<tr>
-				<td> <input type="text" value="Matematyka" required> </td>
-				<td> <input type="text" value="Jan Kowslaki" required>  </td>
-				<td><button type="button">Usuń</button></td>
-				<td><button type="button">Edytuj</button></td>
 			</tr>
 			<tr>
 				<td> <input type="text" value="Informatyka" required> </td>
