--- a/Lab6JavaScript/src/main/resources/index.html
+++ b/Lab6JavaScript/src/main/resources/index.html
@@ -7,24 +7,23 @@
 	<link rel="stylesheet" href="styles.css">
 	<script type="text/javascript" src="jquery.js"></script>
 	<script type="text/javascript" src="knockout.js"></script>
+	<script type="text/javascript" src="komapping.js"></script>
 	<script type="text/javascript" src="myJS.js"></script>
-
 </head>
 
 <body>
-	
 	<header>
 		<h1><img src="logo.png" alt="Italian Trulli">System zarządzania ocenami studentów</h1>
 	
 	</header>
 
-<nav>
-	<ul>
-		<li> <a class="menu" href="#students">Lista studentów</a> </li>
-		<li> <a class="menu" href="#grades">Lista ocen</a></li>
-		<li> <a class="menu" href="#courses">Lista przedmiotów</a></li>
-	</ul>
-</nav>
+	<nav>
+		<ul>
+			<li> <a class="menu" href="#students">Lista studentów</a> </li>
+			<li> <a class="menu" href="#grades">Lista ocen</a></li>
+			<li> <a class="menu" href="#courses">Lista przedmiotów</a></li>
+		</ul>
+	</nav>
 
 
 
@@ -51,14 +50,15 @@
 				<td></td>
 				<td></td>
 			</tr>
-			<tbody data-bind="foreach: student">
-				<tr>
-					<td> <input type="number" data-bind="value: index" readonly>  </td>
-					<td> <input type="text" data-bind="value: name" required> </td>
-					<td> <input type="text" data-bind="value: surname" required> </td>
-					<td> <input type="date" data-bind="value: birthdate" min="1950-01-01" max="2050-01-01" required> </td>
+			<!--<tbody data-bind="foreach: student">-->
+			<tbody data-bind="foreach: studentsList">
+				<tr >
+					<td> <input type="number" data-bind="value: index" name="index" readonly>  </td>
+					<td> <input type="text" data-bind="value: name" name="name"required> </td>
+					<td> <input type="text" data-bind="value: surname" name="surname"required> </td>
+					<td> <input type="date" data-bind="value: birthdate" name="birthdate" min="1950-01-01" max="2050-01-01" required> </td>
 					<td> <a href="#grades">Wyświetl oceny</a> </td>
-					<td><button type="button">Usuń</button></td>
+					<td><button type="button" >Usuń</button></td>
 					<td><button type="button" >Edytuj</button></td>
 				</tr>
 			</tbody>
