--- a/Lab6JavaScript/src/main/resources/index.html
+++ b/Lab6JavaScript/src/main/resources/index.html
@@ -57,7 +57,7 @@
 					<td> <input type="text" data-bind="value: name" name="name"required> </td>
 					<td> <input type="text" data-bind="value: surname" name="surname"required> </td>
 					<td> <input type="date" data-bind="value: birthdate" name="birthdate" min="1950-01-01" max="2050-01-01" required> </td>
-					<td> <a href="#grades">Wyświetl oceny</a> </td>
+					<td> <a data-bind="value: link">Wyświetl oceny</a> </td>
 					<td><button type="button" >Usuń</button></td>
 					<td><button type="button" >Edytuj</button></td>
 				</tr>
