--- a/Lab6JavaScript/src/main/resources/index.html
+++ b/Lab6JavaScript/src/main/resources/index.html
@@ -21,7 +21,7 @@
 		<ul>
 			<li> <a class="menu" href="#students">Lista studentów</a> </li>
 			<li> <a class="menu" href="#grades">Lista ocen</a></li>
-			<li> <a class="menu" href="#courses">Lista przedmiotów</a></li>
+			<!--<li> <a class="menu" href="#courses">Lista przedmiotów</a></li>-->
 		</ul>
 	</nav>
 
@@ -51,13 +51,13 @@
 				<td></td>
 			</tr>
 			<!--<tbody data-bind="foreach: student">-->
-			<tbody data-bind="foreach: studentsList">
+			<tbody data-bind="foreach: students.studentsList">
 				<tr >
 					<td> <input type="number" data-bind="value: index" name="index" readonly>  </td>
 					<td> <input type="text" data-bind="value: name" name="name"required> </td>
 					<td> <input type="text" data-bind="value: surname" name="surname"required> </td>
 					<td> <input type="date" data-bind="value: birthdate" name="birthdate" min="1950-01-01" max="2050-01-01" required> </td>
-					<td> <a data-bind="value: link">Wyświetl oceny</a> </td>
+					<td><button type="button" data-bind="click: getStudentsGrades">Wyświetl oceny</button></td>
 					<td><button type="button" >Usuń</button></td>
 					<td><button type="button" >Edytuj</button></td>
 				</tr>
@@ -88,8 +88,8 @@
 				<th></th>
 			</tr>
 			<tr> <!--do filtrowanie -->
-				<td><input type="number" name="value" min="2.0" max="5.0" step="0.5" placeholder="value"></td>
-                <td><input type="date" min="1950-01-01" max="2010-01-01" id="gradeDate"></td>
+				<td><input type="number" name="value" min="2.0" max="5.0" step="0.5" id="gradeValueFiltringplaceholder="></td>
+                <td><input type="date" min="1950-01-01" max="2010-01-01" id="gradeDateFiltring"></td>
 				<td>
 					<select>
 						<option value="" disabled selected hidden>Wybierz...</option>
@@ -99,21 +99,21 @@
 				</td>
 				<td></td><td></td><td></td>
 			</tr>
-			<tr>
-				<td><input type="number" name="value" value="2.0" min="2.0" max="5.0" step="0.5"></td>
-				<td> <input type="date" value="1996-01-05" min="1950-01-01" max="2010-01-01" required> </td>
-				<td> 
-					<select>
-
-						<option value="1">Informatyka</option>
-						<option value="2" selected>Matematyka</option>
-					</select>
-				</td>
-				<td> <a href="#courses">Wyświetl przedmiot</a> </td>
-				<td><button type="button">Usuń</button></td>
-				<td><button type="button">Edytuj</button></td>
-				
+			<tbody>
+				<tr>
+					<td><input type="number" id="gradeValue" name="value" min="2.0" max="5.0" step="0.5"></td>
+					<td> <input type="date" id="gradeDate" min="1950-01-01" max="2010-01-01" required> </td>
+					<td>
+						<select>
+							<option value="1">Informatyka</option>
+							<option value="2" selected>Matematyka</option>
+						</select>
+					</td>
+					<td> <a href="#grades">Wyświetl przedmiot</a> </td>
+					<td><button type="button">Usuń</button></td>
+					<td><button type="button">Edytuj</button></td>
 			</tr>
+			</tbody>
 			<tr> <!--do dodawania -->
 				<td><input type="number" name="value" min="2.0" max="5.0" step="0.5" placeholder="value"></td>
                 <td><input type="date" id="gradeDateToAdd" required></td>
@@ -147,7 +147,7 @@
                 <td><input type="text" id="teacherName" placeholder="TeacherName"></td>
 				<td></td><td></td>
 			</tr>
-			<tbody data-bind="foreach: coursesList">
+			<tbody data-bind="foreach: courses.coursesList">
 				<tr>
 					<td> <input type="text" data-bind="value: name" name="name" required> </td>
 					<td> <input type="text" data-bind="value: teacherName" name="teacherName" required>  </td>
