--- a/Lab6JavaScript/src/main/resources/index.html
+++ b/Lab6JavaScript/src/main/resources/index.html
@@ -20,7 +20,6 @@
 <nav>
 	<ul>
 		<li> <a class="menu" href="#students">Lista studentów</a> </li>
-		<!--<li> <a class="menu" href="#grades">Lista ocen</a></li>-->
 		<li> <a class="menu" href="#courses">Lista przedmiotów</a></li>
 	</ul>
 </nav>
@@ -56,14 +55,14 @@
 				<td> <input type="text" data-bind="value: surname" name="surname"required> </td>
 				<td> <input type="date" data-bind="value: birthdate" name="birthdate" min="1950-01-01" max="2050-01-01" required> </td>
 				<td><button type="button" data-bind="click: $parent.getStudentsGrades">Wyświetl oceny</button></td>
-				<td><button type="button" >Usuń</button></td>
+				<td><button type="button" data-bind="click: $parent.deleteStudent">Usuń</button></td>
 			</tr>
 			</tbody>
 			<tr> <!--do dodania -->
 				<td>Dodaj studenta</td>
 				<td><input type="text" data-bind="value: newStudent.name" id="studentsNameToAdd" placeholder="Name" required></td>
 				<td><input type="text" data-bind="value: newStudent.surname" id="studentsSurnameToAdd" placeholder="Surname" required></td>
-				<td><input type="date" data-bind="value: newStudent.birthdate" min="1950-01-01" max="2020-01-01" id="studentsBrithdateToAdd" required></td>
+				<td><input type="date" data-bind="value: newStudent.dateOfBirth" min="1950-01-01" max="2020-01-01" id="studentsBrithdateToAdd" required></td>
 				<td><button type="submit" id="addStudent">Dodaj</button></td>
 				<td></td>
 			</tr>
