--- a/Lab6JavaScript/src/main/resources/index.html
+++ b/Lab6JavaScript/src/main/resources/index.html
@@ -155,7 +155,7 @@
 			<tr>
 				<td> <input type="text" data-bind="value: name" name="name" required> </td>
 				<td> <input type="text" data-bind="value: teacherName" name="teacherName" required>  </td>
-				<td><button type="button">Usuń</button></td>
+				<td><button type="button" data-bind="click: $parent.deleteCourse">Usuń</button></td>
 			</tr>
 			</tbody>
 			<tr> <!--do dodania -->
