delete student grade

--- a/Lab6JavaScript/src/main/resources/index.html
+++ b/Lab6JavaScript/src/main/resources/index.html
@@ -112,7 +112,7 @@
                       value: course.name()">
 					</select>
 				</td>
-				<td><button type="button">Usuń</button></td>
+				<td><button type="button" data-bind="click: $parent.deleteGrade">Usuń</button></td>
 			</tr>
 			</tbody>
 			<tr> <!--do dodawania -->
