refresh after delete grade

--- a/Lab6JavaScript/src/main/resources/index.html
+++ b/Lab6JavaScript/src/main/resources/index.html
@@ -106,9 +106,8 @@
                         return item.name;
                       },
                       optionsValue: function(item) {
-                        return item.value;
-                      },
-                      optionsCaption: course.name" data-bind="value: course.name">
+                        return item.id;
+                      }">
 					</select>
 				</td>
 				<td><button type="button" data-bind="click: $parent.deleteGrade">Usuń</button></td>
