--- a/Lab6JavaScript/src/main/resources/index.html
+++ b/Lab6JavaScript/src/main/resources/index.html
@@ -44,7 +44,16 @@
 				<td><input type="search" data-bind="textInput: studentFilters.name" id="studentsName" placeholder="Name"></td>
 				<td><input type="search" data-bind="textInput: studentFilters.surname" id="studentsSurname" placeholder="Surname"></td>
 				<td><input type="date" data-bind="textInput: studentFilters.birthdate" min="1950-01-01" max="2020-01-01" id="studentsBrithdate"></td>
-				<td></td>
+				<td>
+					<select data-bind="options: filtreDataTypes,
+                   optionsText: function(item) {
+                       return item.dateName
+                   },
+                   optionsValue: function(item) {
+                       return item.dateValue
+                   },
+                   value: studentFilters.type"></select>
+				</td>
 				<td></td>
 			</tr>
 			<!--<tbody data-bind="foreach: student">-->
